# oscilloscopy

./: .gitignore  .mypy.ini  Pipfile  README.md  classes.py  oscilloscopy.py  pyproject.toml  ruff.toml
.github/workflows/: codestyles.yml  testing.yml  typecheck.yml
scripts/: all.sh  codestyle.sh  coverage.sh  typecheck.sh
src/oscilloscopy/: oscilloscopedata.py
tests/: test.py
tests/files/folder_3_csv/: F0001CH1.CSV  F0002CH2.CSV
tests/files/missing_channel_data/: F0001CH1.CSV  F0001CH2.CSV  F0001TEK.SET
